refactor: Refactor the data source

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -38,10 +38,6 @@ nas.ffmpeg-bin-dir=/home/ffmpeg/bin
 nas.out-dir=/home/tmp
 # aria2c.exe 文件位置 G:/bin/aria2c.exe
 nas.aria2c-file=
-# 音乐文件目录
-nas.file-data-source.music-file-dir=/home/music_yunshu
-# 歌词文件目录
-nas.file-data-source.lyric-file-dir=/home/lyric_yunshu
 ##########################################################
 #
 #           认证配置
@@ -55,15 +51,27 @@ nas.file-data-source.lyric-file-dir=/home/lyric_yunshu
 #           数据源配置
 #
 ##########################################################
-#nas.enable-mixed-data-source=
-#nas.file-data-source.url-prefix=
-#nas.tencent-cos-data-source.secret-id=
-#nas.tencent-cos-data-source.secret-key=
-#nas.tencent-cos-data-source.region-name=
-#nas.tencent-cos-data-source.bucket-name=
-#nas.tencent-cos-data-source.cdn-url=
-#nas.backup-file-data-source.music-file-dir=
-#nas.backup-file-data-source.lyric-file-dir=
+#nas.music.datasource.main_file.class-name=top.itning.yunshunas.music.datasource.impl.FileDataSource
+#nas.music.datasource.main_file.music-file-dir=/home/music_yunshu
+#nas.music.datasource.main_file.lyric-file-dir=/home/lyric_yunshu
+#nas.music.datasource.main_file.can-read=true
+#nas.music.datasource.main_file.can-write=true
+#nas.music.datasource.main_file.url-prefix=
+
+#nas.music.datasource.back_file.class-name=top.itning.yunshunas.music.datasource.impl.FileDataSource
+#nas.music.datasource.back_file.music-file-dir=D:\\yunshu-nas-test\\back\\music
+#nas.music.datasource.back_file.lyric-file-dir=D:\\yunshu-nas-test\\back\\lyric
+#nas.music.datasource.back_file.can-read=false
+#nas.music.datasource.back_file.can-write=true
+
+#nas.music.datasource.tencent-cos.class-name=top.itning.yunshunas.music.datasource.impl.TencentCosDataSource
+#nas.music.datasource.tencent-cos.secret-id=
+#nas.music.datasource.tencent-cos.secret-key=
+#nas.music.datasource.tencent-cos.region-name=
+#nas.music.datasource.tencent-cos.bucket-name=
+#nas.music.datasource.tencent-cos.cdn-url=
+#nas.music.datasource.tencent-cos.can-read=false
+#nas.music.datasource.tencent-cos.can-write=true
 ##########################################################
 #
 #           ElasticSearch配置
