--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <jaudiotagger.version>2.0.3</jaudiotagger.version>
         <qcloud.cos_api.version>5.6.139</qcloud.cos_api.version>
+        <mysql.version>8.0.32</mysql.version>
     </properties>
 
     <dependencies>
@@ -191,6 +192,12 @@
                 <groupId>com.qcloud</groupId>
                 <artifactId>cos_api</artifactId>
                 <version>${qcloud.cos_api.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
             </dependency>
 
         </dependencies>
