--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -79,3 +79,14 @@ nas.aria2c-file=
 ##########################################################
 spring.data.elasticsearch.repositories.enabled=${ENABLED_ELASTICSEARCH:false}
 spring.elasticsearch.uris=${ELASTICSEARCH_URI:http://localhost:9200}
+##########################################################
+#
+#           FTP服务端配置
+#
+##########################################################
+#nas.ftp.config.my_ftp.users[0].enable-anonymous-access=true
+#nas.ftp.config.my_ftp.users[0].home-dir=D://
+#nas.ftp.config.my_ftp.users[0].username=
+#nas.ftp.config.my_ftp.users[0].password=
+#nas.ftp.config.my_ftp.port=21
+#nas.ftp.config.my_ftp.server-address=127.0.0.1
