--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <jaudiotagger.version>2.0.3</jaudiotagger.version>
         <qcloud.cos_api.version>5.6.139</qcloud.cos_api.version>
         <mysql.version>8.0.32</mysql.version>
+        <ftpserver.version>1.2.0</ftpserver.version>
     </properties>
 
     <dependencies>
@@ -198,6 +199,12 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.ftpserver/ftpserver-core -->
+            <dependency>
+                <groupId>org.apache.ftpserver</groupId>
+                <artifactId>ftpserver-core</artifactId>
+                <version>${ftpserver.version}</version>
             </dependency>
 
         </dependencies>
