feat: change to config

--- a/nas-deploy/src/main/resources/application.properties
+++ b/nas-deploy/src/main/resources/application.properties
@@ -6,6 +6,7 @@
 server.port=8888
 server.undertow.direct-buffers=true
 spring.application.name=yunshu-nas
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 # 服务端地址
 nas.server-url=http://127.0.0.1:${server.port}
 ##########################################################
