--- a/nas-front-end/angular.json
+++ b/nas-front-end/angular.json
@@ -47,7 +47,9 @@
             },
             "scripts": [],
             "allowedCommonJsDependencies": [
-              "music-metadata-browser"
+              "music-metadata-browser",
+              "dplayer",
+              "dayjs"
             ]
           },
           "configurations": {
