--- a/nas-front-end/package.json
+++ b/nas-front-end/package.json
@@ -21,7 +21,7 @@
     "dayjs": "^1.11.7",
     "dplayer": "^1.27.1",
     "js-base64": "^3.7.5",
-    "music-metadata-browser": "^2.5.10",
+    "music-metadata-browser": "2.4.3",
     "ng-zorro-antd": "^15.1.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.5.0",
