--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <skipTests>true</skipTests>
         <commons-io.version>2.15.0</commons-io.version>
         <commons-codec.version>1.16.0</commons-codec.version>
@@ -40,7 +40,7 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <jaudiotagger.version>2.0.3</jaudiotagger.version>
         <qcloud.cos_api.version>5.6.187</qcloud.cos_api.version>
-        <mysql.version>8.0.32</mysql.version>
+        <mysql.version>8.2.0</mysql.version>
         <ftpserver.version>1.2.0</ftpserver.version>
     </properties>
 
@@ -194,10 +194,10 @@
                 <artifactId>cos_api</artifactId>
                 <version>${qcloud.cos_api.version}</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+            <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
             <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
                 <version>${mysql.version}</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/org.apache.ftpserver/ftpserver-core -->
