--- a/.github/workflows/compile_test.yml
+++ b/.github/workflows/compile_test.yml
@@ -24,8 +24,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: 21
 
       - name: Cache local Maven repository
