--- a/.github/workflows/docker-version.yml
+++ b/.github/workflows/docker-version.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Version Image
 
 on:
   workflow_dispatch:
@@ -15,11 +15,15 @@ jobs:
           distribution: 'zulu'
           java-version: 21
 
+      - name: Get Maven project version
+        id: get_version
+        run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
       - name: Build Docker image
-        run: docker build -t itning/yunshu-nas:latest .
+        run: docker build -t itning/yunshu-nas-test:${{ env.PROJECT_VERSION }} .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -28,4 +32,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Docker image to Docker Hub
-        run: docker push itning/yunshu-nas:latest
+        run: docker push itning/yunshu-nas-test:${{ env.PROJECT_VERSION }}
