--- a/.github/workflows/docker-version.yml
+++ b/.github/workflows/docker-version.yml
@@ -17,7 +17,9 @@ jobs:
 
       - name: Get Maven project version
         id: get_version
-        run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+        run: |
+          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          echo "PROJECT_VERSION=${VERSION%%.*}" >> $GITHUB_ENV
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
