--- a/.github/workflows/docker-version.yml
+++ b/.github/workflows/docker-version.yml
@@ -19,7 +19,8 @@ jobs:
         id: get_version
         run: |
           VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-          echo "PROJECT_VERSION=${VERSION%%.*}" >> $GITHUB_ENV
+          CLEAN_VERSION=$(echo "$VERSION" | sed 's/\.RELEASE//')
+          echo "PROJECT_VERSION=${CLEAN_VERSION}" >> $GITHUB_ENV
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
