--- a/.github/workflows/docker-version.yml
+++ b/.github/workflows/docker-version.yml
@@ -26,7 +26,7 @@ jobs:
         run: mvn -B package --file pom.xml
 
       - name: Build Docker image
-        run: docker build -t itning/yunshu-nas-test:${{ env.PROJECT_VERSION }} .
+        run: docker build -t itning/yunshu-nas:${{ env.PROJECT_VERSION }} .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -35,4 +35,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Docker image to Docker Hub
-        run: docker push itning/yunshu-nas-test:${{ env.PROJECT_VERSION }}
+        run: docker push itning/yunshu-nas:${{ env.PROJECT_VERSION }}
