--- a/nas-common/pom.xml
+++ b/nas-common/pom.xml
@@ -42,6 +42,10 @@
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+        </dependency>
 
     </dependencies>
 
