--- a/nas-front-end/package.json
+++ b/nas-front-end/package.json
@@ -35,6 +35,8 @@
     "@types/dplayer": "^1.25.5",
     "@types/jasmine": "~5.1.8",
     "@types/node": "^24.0.10",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
     "jasmine-core": "~5.7.1",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
