--- a/nas-front-end/tsconfig.json
+++ b/nas-front-end/tsconfig.json
@@ -16,6 +16,7 @@
       "es2020",
       "dom"
     ],
+    "types": ["buffer", "events"],
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
