--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.7</version>
+        <version>4.0.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>top.itning.yunshu-nas</groupId>
     <artifactId>nas-parent</artifactId>
-    <version>2.1.8.RELEASE</version>
+    <version>2.2.0.RELEASE</version>
     <name>yunshu-nas</name>
     <description>Yun Shu Nas Project</description>
     <url>https://github.com/itning/yunshu-nas</url>
@@ -59,8 +59,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
+            <version>4.0.0-M1</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-client -->
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-client</artifactId>
+            <version>8.19.7</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
