feat: Introduce `compile` GitHub Actions workflow to build the project on push, pull request, and manual dispatch.

--- a/.github/workflows/compile_test.yml
+++ b/.github/workflows/compile_test.yml
@@ -10,6 +10,8 @@ on:
       - nas-video/**
       - pom.xml
   push:
+    branches:
+      - master
     paths:
       - nas-common/**
       - nas-deploy/**
